--- a/pom.xml
+++ b/pom.xml
@@ -7,6 +7,7 @@
 	<packaging>pom</packaging>
 	<modules>
 		<module>tutorials-springboot</module>
+		<module>tutorials-dubbo</module>
 	</modules>
 
 	<properties>
