--- a/tutorials-dubbo/pom.xml
+++ b/tutorials-dubbo/pom.xml
@@ -17,20 +17,25 @@
 	<dependencyManagement>
 		<dependencies>
 			<dependency>
-				<groupId>com.alibaba</groupId>
-				<artifactId>dubbo</artifactId>
-				<version>2.5.3</version>
+				<groupId>io.dubbo.springboot</groupId>
+				<artifactId>spring-boot-starter-dubbo</artifactId>
+				<version>1.0.0</version>
 			</dependency>
-			<dependency>
-				<groupId>com.github.sgroschupf</groupId>
-				<artifactId>zkclient</artifactId>
-				<version>0.1</version>
-			</dependency>
-			<dependency>
-				<groupId>org.apache.zookeeper</groupId>
-				<artifactId>zookeeper</artifactId>
-				<version>3.4.9</version>
-			</dependency>
+			<!-- <dependency> -->
+			<!-- <groupId>com.alibaba</groupId> -->
+			<!-- <artifactId>dubbo</artifactId> -->
+			<!-- <version>2.5.3</version> -->
+			<!-- </dependency> -->
+			<!-- <dependency> -->
+			<!-- <groupId>com.github.sgroschupf</groupId> -->
+			<!-- <artifactId>zkclient</artifactId> -->
+			<!-- <version>0.1</version> -->
+			<!-- </dependency> -->
+			<!-- <dependency> -->
+			<!-- <groupId>org.apache.zookeeper</groupId> -->
+			<!-- <artifactId>zookeeper</artifactId> -->
+			<!-- <version>3.4.9</version> -->
+			<!-- </dependency> -->
 		</dependencies>
 	</dependencyManagement>
 
