--- a/tutorials-dubbo/tutorials-dubbo-consumer/src/main/resources/application.yml
+++ b/tutorials-dubbo/tutorials-dubbo-consumer/src/main/resources/application.yml
@@ -1,5 +1,6 @@
 spring:
     dubbo:
         application.name: tutorials-dubbo-consumer
-        registry.address: multicast://224.5.6.7:1234
+        #registry.address: multicast://224.5.6.7:1234
+        registry.address: zookeeper://192.168.1.66:2181?backup=192.168.1.67:2181,192.168.1.68:2181
         scan: my.tutorials.dubbo.consumer
