--- a/tutorials-dubbo/tutorials-dubbo-provider/src/main/resources/application.yml
+++ b/tutorials-dubbo/tutorials-dubbo-provider/src/main/resources/application.yml
@@ -1,7 +1,8 @@
 spring:
     dubbo:
         application.name: tutorials-dubbo-provider
-        registry.address: multicast://224.5.6.7:1234
+        #registry.address: multicast://224.5.6.7:1234
+        registry.address: zookeeper://192.168.1.66:2181?backup=192.168.1.67:2181,192.168.1.68:2181
         protocol:
             name: dubbo
             port: 20880
